--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+# DataSource Setting
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# SQL
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
+
+# Hibernate
+spring.jpa.database=mysql
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+# Prefix for api
+server.servlet.contextPath=/api
